# softenghw1

./: .gitignore  README.md  app.py  create_table.sql  cred.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: python-tests.yml
script/: create-server.sh  create_table.sql
src/vending/: app.py  database.py  machine.py  query.py  vending_machine.py
tests/: conftest.py  test_machine.py  test_query.py
