[tool.poetry]
name = "softenghw1"
version = "0.1.0"
description = ""
authors = ["tanthana48 <113759642+tanthana48@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
flask-mysqldb = "^1.0.1"
pyyaml = "^6.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

